SUBDIRS = clipart \
          examples \
          extensions \
          fonts \
          gradients \
          icons \
          keyboards \
          markers \
          palettes \
          patterns \
          screens \
          templates \
          tutorials \
          ui

## COPY THE REST OF THE FOLDERS TO THE PROPER LOCATION

## dist-hook:
##	mkdir $(distdir)/samples
##	cp $(datadir)/samples/*svg $(distdir)/samples
##	cp $(datadir)/samples/*png $(distdir)/samples

