SUBDIRS = attributes \
          branding \
          examples \
          extensions \
          filters \
          fonts \
          gradients \
          icons \
          keys \
          markers \
          palettes \
          patterns \
          screens \
          symbols \
          templates \
          tutorials \
          ui

## COPY THE REST OF THE FOLDERS TO THE PROPER LOCATION

## dist-hook:
##	mkdir $(distdir)/samples
##	cp $(datadir)/samples/*svg $(distdir)/samples
##	cp $(datadir)/samples/*png $(distdir)/samples

